@@ -4,12 +4,16 @@ package ru.obabok;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import org.spongepowered.asm.launch.MixinBootstrap;
+import org.spongepowered.asm.logging.ILogger;
 import org.spongepowered.asm.mixin.MixinEnvironment;
 import org.spongepowered.asm.mixin.Mixins;
+import ru.obabok.mixin.SimpleLogger;
 
 import java.io.File;
 import java.io.InputStreamReader;
+import java.io.PrintStream;
 import java.lang.reflect.Method;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -23,11 +27,22 @@ public class Main {
     public static JarFile gameJarFile;
     public static boolean TRACE = false;
     public static boolean DEBUG = false;
-    public static boolean MIXIN_EXPORT = true;
+    public static boolean MIXIN_EXPORT = false;
+
+    public static final SimpleLogger LOGGER = new SimpleLogger();
+
     public static void main(String[] args) {
-        System.out.println("Запуск SimpleLoader... " + args.length);
+
         try {
-            Path mcPath = Paths.get("/home/alex/.local/share/PrismLauncher/libraries/com/mojang/minecraft/26.1.1/minecraft-26.1.1-client.jar");
+            System.setOut(new PrintStream(System.out, true, StandardCharsets.UTF_8));
+        } catch (Exception ignored) {}
+
+        LOGGER.info("Запуск SimpleLoader");
+        try {
+            //linux
+            //Path mcPath = Paths.get("/home/alex/.local/share/PrismLauncher/libraries/com/mojang/minecraft/26.1.1/minecraft-26.1.1-client.jar");
+            //windows
+            Path mcPath = Paths.get("C:/Users/Alexresh/AppData/Roaming/PrismLauncher/libraries/com/mojang/minecraft/26.1.1/minecraft-26.1.1-client.jar");
             gameJarFile = new JarFile(mcPath.toFile());
 
             //System.setProperty("org.lwjgl.librarypath", System.getProperty("java.library.path"));
@@ -38,7 +53,7 @@ public class Main {
             MixinBootstrap.init();
             MixinEnvironment.getDefaultEnvironment().setSide(MixinEnvironment.Side.CLIENT);
             Mixins.addConfiguration("simpleloader.mixins.json");
-            System.out.println("Mixin система готова!");
+            LOGGER.debug("Mixin loaded!");
             //Path mcJar = Paths.get("/home/alex/.local/share/PrismLauncher/libraries/com/mojang/minecraft/26.1.1/minecraft-26.1.1-client.jar");
 
 
@@ -47,20 +62,36 @@ public class Main {
             List<Path> jarPaths = Arrays.stream(paths)
                     .map(Paths::get)
                     .filter(p -> p.toString().endsWith(".jar"))
-                    .collect(Collectors.toList());
+                    .toList();
 
 
             File modsDir = new File("mods");
             if (!modsDir.exists()) modsDir.mkdirs();
 
-            List<Path> allPaths = new ArrayList<>();
-            allPaths.addAll(jarPaths);
+            List<Path> allPaths = new ArrayList<>(jarPaths);
 
             File[] modFiles = modsDir.listFiles((dir, name) -> name.endsWith(".jar"));
             if (modFiles != null) {
                 for (File mod : modFiles) {
                     allPaths.add(mod.toPath());
-                    System.out.println("Найден мод: " + mod.getName());
+
+                    try (JarFile jar = new JarFile(mod)) {
+                        JarEntry entry = jar.getJarEntry("mod.json");
+                        if (entry != null) {
+                            JsonObject json = JsonParser.parseReader(new InputStreamReader(jar.getInputStream(entry))).getAsJsonObject();
+
+                            // Если в json есть поле "mixins"
+                            if (json.has("mixins")) {
+                                String mixinConfig = json.get("mixins").getAsString();
+                                Mixins.addConfiguration(mixinConfig);
+                                System.out.println("Зарегистрированы миксины мода " + mod.getName() + ": " + mixinConfig);
+                            }
+                        }
+                    } catch (Exception e) {
+                        System.err.println("Ошибка пред-загрузки мода: " + mod.getName());
+                    }
+
+
                 }
             }
 
@@ -71,40 +102,48 @@ public class Main {
 
             Method mainMethod = mcMain.getMethod("main", String[].class);
             Thread.currentThread().setContextClassLoader(loader);
+            if(modFiles != null){
+                for (File modFile : modFiles) {
+                    try (JarFile jar = new JarFile(modFile)) {
+                        JarEntry entry = jar.getJarEntry("mod.json");
+                        if (entry != null) {
+                            InputStreamReader reader = new InputStreamReader(jar.getInputStream(entry));
+                            JsonObject json = JsonParser.parseReader(reader).getAsJsonObject();
+                            String mainClass = json.get("mainClass").getAsString();
+                            LOGGER.debug("mainClass = " + mainClass);
 
-            for (File modFile : modFiles) {
-                try (JarFile jar = new JarFile(modFile)) {
-                    JarEntry entry = jar.getJarEntry("mod.json");
-                    System.out.println("mod.json найден");
-                    if (entry != null) {
-                        InputStreamReader reader = new InputStreamReader(jar.getInputStream(entry));
-                        JsonObject json = JsonParser.parseReader(reader).getAsJsonObject();
-                        String mainClass = json.get("mainClass").getAsString();
-                        System.out.println("mainClass= "+mainClass);
-                        Class<?> clazz = Class.forName(mainClass, true, loader);
-                        System.out.println("class loaded");
-                        System.out.println("Методы в классе " + mainClass + ":");
-                        for (Method m : clazz.getMethods()) {
-                            System.out.println("- " + m.getName() + " (static: " + java.lang.reflect.Modifier.isStatic(m.getModifiers()) + ")");
+                            Class<?> clazz = Class.forName(mainClass, true, loader);
+
+                            if(DEBUG){
+                                LOGGER.debug("[Loader] Methods in class " + mainClass + ":");
+                                for (Method m : clazz.getMethods()) {
+                                    LOGGER.debug("- " + m.getName() + " (static: " + java.lang.reflect.Modifier.isStatic(m.getModifiers()) + ")");
+                                }
+                            }
+
+
+                            Method initMethod = clazz.getDeclaredMethod("main");
+                            initMethod.setAccessible(true);
+                            initMethod.invoke(null);
+
+                            LOGGER.debug("[Loader] Mod " + modFile.getName() + " initialized");
+                        }else {
+                            LOGGER.error("[Loader] Mod: " + jar.getName() + " has no mod.json! [not loaded]");
                         }
-
-                        Method initMethod = clazz.getDeclaredMethod("main");
-                        initMethod.setAccessible(true);
-                        initMethod.invoke(null);
-
-                        System.out.println("Мод " + modFile.getName() + " инициализирован.");
+                    } catch (Exception e) {
+                        LOGGER.error("[Loader] Error while load mod: " + modFile.getName(), e.fillInStackTrace());
                     }
-                } catch (Exception e) {
-                    System.err.println("Ошибка загрузки мода " + modFile.getName());
-                    e.printStackTrace();
                 }
             }
 
-
             mainMethod.invoke(null, (Object) args);
         }catch (Exception exception){
-            exception.printStackTrace();
+            LOGGER.error("[Loader] Error while load: ", exception.fillInStackTrace());
         }
 
+    }
+
+    public static void print(String text){
+        LOGGER.info(text);
     }
 }
